fix: jstree elements overflow text properly with ellipses.

--- a/themes/bootstrap3/scss/components/js-tree.scss
+++ b/themes/bootstrap3/scss/components/js-tree.scss
@@ -62,6 +62,21 @@
   padding-left: 1rem;
 }
 
+/* facet and tree text overflow  */
+.hierarchical-facet-anchor,
+.hierarchical-facet-anchor .text {
+  width: calc(100% - 1.5em);
+}
+.hierarchy-tree .jstree-node,
+.hierarchical-facet-anchor .text .icon-link__label {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.hierarchical-facet-anchor .text .icon-link__label {
+  display: inline;
+}
+
 .jstree-clicked,
 .jstree-clicked:active,
 .jstree-clicked:focus,
@@ -71,7 +86,7 @@
     background-color: $list-group-active-bg;
 
     .jstree-themeicon-custom {
-      color: #fff;
+      color: $list-group-active-color;
       filter: invert(1);
     }
   }
